<resources>
    <string name="app_name">MorningFriend</string>

    <string name="snackbar_mute_message">You can mute the ringing</string>
    <string name="snackbar_mute_button_text">Mute</string>

    <string name="alarm_enabled_caption">Enabled</string>
    <string name="choose_difficulty_caption">Difficulty</string>
    <string name="choose_puzzle_caption">Puzzle</string>


    <string name="menu_settings_run_demo">Run demo</string>
    <string name="menu_alarms_list_add_alarm">Add alarm</string>
    <string name="menu_alarms_list_settings">Settings</string>
    <string name="menu_detail_delete_alarm">Delete alarm</string>

    <string name="prefs_puzzle_squares">Squares</string>
    <string name="prefs_puzzle_untangle">Untangle Graph</string>
    <string name="prefs_puzzle_labyrinth">Labyrinth</string>
    <string name="prefs_puzzle_equation">Equation</string>

    <string name="prefs_puzzle_squares_value">squares</string>
    <string name="prefs_puzzle_untangle_value">untangle</string>
    <string name="prefs_puzzle_labyrinth_value">labyrinth</string>
    <string name="prefs_puzzle_equation_value">equation</string>

    <string name="prefs_difficulty_easy">Hatred</string>
    <string name="prefs_difficulty_medium">Nightmare</string>
    <string name="prefs_difficulty_hard">Hell</string>

    <string name="prefs_difficulty_easy_value">hatred</string>
    <string name="prefs_difficulty_medium_value">nightmare</string>
    <string name="prefs_difficulty_hard_value">hell</string>

    <string name="details_time_label">Time</string>
    <string name="details_message_label">Title</string>

    <string name="details_repeating_days_workdays">Workdays</string>
    <string name="details_repeating_days_weekends">Weekends</string>
    <string name="details_repeating_days_everyday">Everyday</string>
    <string name="details_repeating_days_custom">Custom</string>

    <string name="details_repeating_days_mon">Mon</string>
    <string name="details_repeating_days_tue">Tue</string>
    <string name="details_repeating_days_wed">Wed</string>
    <string name="details_repeating_days_thu">Thu</string>
    <string name="details_repeating_days_fri">Fri</string>
    <string name="details_repeating_days_sat">Sat</string>
    <string name="details_repeating_days_sun">Sun</string>


    <string name="prefs_ringtone_key">pref_ringtone</string>
    <string name="prefs_ringtone_label">Ringtone</string>

    <string name="demo_hint">Hint</string>
    <string name="demo_try">Try</string>

</resources>
