<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/alarm_detail_days_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:text="@string/details_repeating_days_workdays"
            android:id="@+id/alarm_detail_days_workdays_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <RadioButton
            android:text="@string/details_repeating_days_weekends"
            android:id="@+id/alarm_detail_days_weekends_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <RadioButton
            android:text="@string/details_repeating_days_custom"
            android:id="@+id/alarm_detail_days_custom_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <CheckBox
            android:id="@+id/details_repeating_days_mon_check_box"
            android:text="@string/details_repeating_days_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/details_repeating_days_tue_check_box"
            android:text="@string/details_repeating_days_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/details_repeating_days_wed_check_box"
            android:text="@string/details_repeating_days_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/details_repeating_days_thu_check_box"
            android:text="@string/details_repeating_days_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/details_repeating_days_fri_check_box"
            android:text="@string/details_repeating_days_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/details_repeating_days_sat_check_box"
            android:text="@string/details_repeating_days_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/details_repeating_days_sun_check_box"
            android:text="@string/details_repeating_days_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
